--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -7,7 +7,7 @@
         = video.name
       .main
         %a{:href => video.video.url}
-          %img{:src => video.video.thumb_url, :alt => video.name}
+          %img{"data-preview" => video.video.thumb_url[0..-3], :src => video.video.thumb_url, :alt => video.name}
       .footer
         = link_to 'Show', video
         = link_to 'Edit', edit_video_path(video)
